# adj

./: Adj.hs  CHANGELOG.md  adj.cabal
Adj/: Algebra.hs  Auxiliary.hs  Program.hs
Adj/Algebra/: Category.hs  Functor.hs  Initial.hs  Morphism.hs  Product.hs  Semigroupoid.hs  Set.hs  Sum.hs  Terminal.hs  Unit.hs
Adj/Algebra/Morphism/: Dual.hs  Flat.hs  Kleisli.hs  Straight.hs
Adj/Program/: Casting.hs  Construction.hs  Controlflow.hs  Datastructure.hs  Disbandable.hs  Generation.hs  Instruction.hs  Maybe.hs  Option.hs  Primitive.hs  Progress.hs
Adj/Program/Controlflow/: Implementation.hs
Adj/Program/Controlflow/Implementation/: Optics.hs  State.hs  Store.hs
Adj/Program/Datastructure/: Implementation.hs  Property.hs
Adj/Program/Datastructure/Implementation/: List.hs  Tree.hs
Adj/Program/Datastructure/Property/: Cardinality.hs  Substructure.hs
Adj/Program/Primitive/: Boolean.hs  Generation.hs  Maybe.hs  Predicate.hs  Progress.hs
