name:                adj
version:             0.1.1
synopsis:            Abstract algebra base library
description:         Because programs could be so much better
homepage:            https://github.com/iokasimov/adj
license:             MIT
license-file:        LICENSE
extra-source-files:  CHANGELOG.md, README.md
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2019 Murat Kasimov
category:            Data, Control
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/iokasimov/adj.git

library
  exposed-modules:
    Adj
    Adj.Algebra
    Adj.Algebra.Category
    Adj.Algebra.Set
    Adj.Auxiliary
    Adj.Program
    Adj.Program.Primitive
    Adj.Program.Primitive.Boolean
    Adj.Program.Primitive.Generation
    Adj.Program.Primitive.Maybe
    Adj.Program.Primitive.Progress
    Adj.Program.Controlflow
    Adj.Program.Controlflow.Implementation
    Adj.Program.Controlflow.Implementation.State
    Adj.Program.Controlflow.Implementation.Optics
    Adj.Program.Datastructure
    Adj.Program.Datastructure.Implementation
    Adj.Program.Datastructure.Implementation.List
    Adj.Program.Datastructure.Implementation.Tree
    Adj.Program.Datastructure.Property
    Adj.Program.Datastructure.Property.Cardinality
  default-extensions:
    DataKinds
    ConstraintKinds
    ExistentialQuantification
    GADTs
    QuantifiedConstraints
    InstanceSigs
    StandaloneKindSignatures
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    StandaloneKindSignatures
    LiberalTypeSynonyms
    LambdaCase
    FunctionalDependencies
    MultiParamTypeClasses
    NoImplicitPrelude
    PackageImports
    PolyKinds
    RankNTypes
    ViewPatterns
    PatternSynonyms
    DerivingVia
    StandaloneDeriving
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs -fno-warn-unticked-promoted-constructors -fprint-potential-instances
